structuring webpage, no connectivity yet

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./main.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="jumbotron text-center">
+            Washington Post Front Page Scraper
+        </div>
+        <div class="body">
+            <div class="row">
+                <div class="card col-lg-3 col-md-3" id="first">
+                    <div class="card-header">
+                        this is where the news goes
+                    </div>
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident itaque aspernatur consectetur quaerat aliquam
+                        maiores accusantium repellendus similique architecto? Id repellat rerum, non nihil sit sequi aliquid autem eius
+                        voluptatum!
+                    </div>
+                </div>
+                <div class="card col-lg-3 col-md-3" id="second">
+                    <div class="card-header">
+                        this is where the news goes
+                    </div>
+                    <div class="card-body">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident itaque aspernatur consectetur quaerat aliquam
+                            maiores accusantium repellendus similique architecto? Id repellat rerum, non nihil sit sequi aliquid autem eius
+                            voluptatum!
+                    </div>
+                </div>
+                <div class="card col-lg-3 col-md-3" id="third">
+                    <div class="card-header">
+                        this is where the news goes
+                    </div>
+                    <div class="card-body">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident itaque aspernatur consectetur quaerat aliquam
+                            maiores accusantium repellendus similique architecto? Id repellat rerum, non nihil sit sequi aliquid autem eius
+                            voluptatum!
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+<script type="javascript" href="main.js"></script>
 </body>
+
 </html>
