switched to mongoose, creating get routes

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div class="jumbotron text-center">
             Washington Post Front Page Scraper
         </div>
-        <div class="body">
+        <div class="body" id="body">
             <div class="row">
                 <div class="card col-lg-3 col-md-3" id="first">
                     <div class="card-header">
